✨ feat(graph):  迭代web-ui

--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -10,20 +10,20 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
-    "vue": "^3.4.21",
-    "vue-router": "^4.3.0",
+    "@antv/g6": "^5.0.51",
+    "@vueuse/core": "^10.9.0",
     "pinia": "^2.1.7",
-    "vis-network": "^9.1.6",
-    "@vueuse/core": "^10.9.0"
+    "vue": "^3.4.21",
+    "vue-router": "^4.3.0"
   },
   "devDependencies": {
+    "@types/node": "^20.12.7",
     "@vitejs/plugin-vue": "^5.0.4",
-    "vite": "^5.2.0",
-    "typescript": "^5.4.5",
-    "vue-tsc": "^2.0.6",
-    "tailwindcss": "^3.4.3",
-    "postcss": "^8.4.38",
     "autoprefixer": "^10.4.19",
-    "@types/node": "^20.12.7"
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.4.5",
+    "vite": "^5.2.0",
+    "vue-tsc": "^2.0.6"
   }
 }
