--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,10 @@ nom = "7.1"
 tower-http = { version = "0.6", features = ["cors", "fs"] }
 sled = "0.34"
 bincode = "1.3"
+regex = "1.11"
+rand = "0.8"
+futures = "0.3"
+pin-project = "1.1"
 
 # Cache dependencies
 chrono = { version = "0.4", optional = true }
@@ -23,6 +27,8 @@ prost = { version = "0.13", optional = true }
 [dev-dependencies]
 criterion = "0.5"
 tempfile = "3.13"
+tower = "0.5"
+http-body-util = "0.1"
 
 [build-dependencies]
 tonic-build = { version = "0.12", optional = true }
